[package]
name = "rp2040-blinky"
version = "0.1.0"
edition = "2024"

[dependencies]
rp2040-hal = {version="0.12.0", features=["rt", "critical-section-impl"]}
embedded-hal = "1.0.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

[[bin]]
name = "rp2040-blinky"
path = "src/main.rs"
test = false
doctest = false
bench = false
