[package]
name = "rp2040-blinky"
version = "0.1.0"
edition = "2024"

[dependencies]
rp2040-hal = {version="0.12.0", features=["rt", "critical-section-impl"]}
embedded-hal = "1.0.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
rp2040-boot2 = "0.3.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[[bin]]
name = "rp2040-blinky"
path = "src/main.rs"
test = false
doctest = false
bench = false

[profile.dev]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
